# 2025-07-mle-workshop

./: README.md
day_1/: Makefile  pyproject.toml
day_1/duration_prediction/: main.py  train.py
day_1/tests/: test_train.py
day_2/duration_pred_serve/: Dockerfile  Makefile  fly.toml  pyproject.toml
day_2/duration_pred_serve/integration-tests/: predict-test.py
day_2/duration_pred_serve/src/duration_pred_serve/: ping.py  serve.py
